# DvizhBot

./: README.md
dvizh_bot/: Cargo.toml  Dockerfile  DvizhDB.db  config.json  dvizh_bot.service  run_dvizh_bot.sh
dvizh_bot/src/: application.rs  args.rs  bot_config.rs  errors.rs  main.rs  spam.rs  tg_bot.rs  tg_handlers.rs  validations.rs
dvizh_bot/src/db/: chats.rs  db_objects.rs  events.rs  repository.rs  users.rs
dvizh_bot/src/tg/: callback_queries.rs  command_utils.rs  commands.rs  events.rs  language_utils.rs  message_handler.rs  messaging.rs  msg_request.rs  msg_type_utils.rs  tg_bot.rs  tg_handlers.rs  tg_objects.rs  tg_utils.rs
dvizh_bot/src/translations/: en.json  language_cache.rs  pl.json  ru.json  translation_value.rs
