[package]
name = "dvizh_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4"
env_logger = "0.11.0"
